third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/append-to-array-with-dotted-keys.stderr
TOML parse error at line 4, column 1
  |
4 | b.y = 2
  | ^
duplicate key `y`
